Production database stuff

--- a/config/database.yml
+++ b/config/database.yml
@@ -32,13 +32,13 @@ test:
   host: 127.0.0.1
 
 production:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  database: branchapp_prod
+  adapter: postgresql
+  encoding: unicode
   pool: 5
-  username: branchapp_admin
-  password: 6BvX8bsD2YM8ZVM
-  host: 127.0.0.1
+  database: d738daednfluqv
+  username: qmpjzsnlysjuvv
+  password: 2sVzTHewM5IPNobo4jm09ZvPW1
+  host: ec2-54-225-105-169.compute-1.amazonaws.com
+  port: 5432
 
   #CREATE USER 'branch_admin'@'localhost' IDENTIFIED BY '6BvX8bsD2YM8ZVM';
