--- a/config/database.yml
+++ b/config/database.yml
@@ -32,10 +32,10 @@ test:
   host: 127.0.0.1
 
 production:
-  adapter: pg
+  adapter: mysql2
   encoding: utf8
-  database: d8upsvecud8ha5
-  username: zfysktkcojzhdq
-  password: KHqEatFDqmQ5-BoqWenxU3pCIz
-  host: ec2-23-23-214-251.compute-1.amazonaws.com
-  port: 5432
+  database: branchapp_production
+  username: branchapp_admin
+  password: 8AURXYJyfx7MAe9
+  host: branchapp-prod.comcwzwmeybi.us-east-1.rds.amazonaws.com
+  port: 3306
