--- a/config/database.yml
+++ b/config/database.yml
@@ -34,8 +34,8 @@ test:
 production:
   adapter: mysql2
   encoding: utf8
-  database: branchapp_production
-  username: branchapp_admin
-  password: 8AURXYJyfx7MAe9
-  host: branchapp-prod.comcwzwmeybi.us-east-1.rds.amazonaws.com
-  port: 3306
+  database: <%= ENV['RDS_DB_NAME'] %>
+  username: <%= ENV['RDS_USERNAME'] %>
+  password: <%= ENV['RDS_PASSWORD'] %>
+  host: <%= ENV['RDS_HOSTNAME'] %>
+  port: <%= ENV['RDS_PORT'] %>
