--- a/config/database.yml
+++ b/config/database.yml
@@ -1,13 +1,5 @@
 # MySQL.  Versions 4.1 and 5.0 are recommended.
-# 
-# Install the MYSQL driver
-#   gem install mysql2
-#
-# Ensure the MySQL gem is defined in your Gemfile
-#   gem 'mysql2'
-#
-# And be sure to use new-style password hashing:
-#   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
+
 development:
   adapter: mysql2
   encoding: utf8
@@ -18,9 +10,18 @@ development:
   password:
   host: 127.0.0.1
 
+# this is used for offline use only
+local_stage:
+  adapter: mysql2
+  encoding: utf8
+  reconnect: false
+  database: branchapp_development
+  pool: 5
+  username: root
+  password:
+  host: 127.0.0.1
+
 # Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
   adapter: mysql2
   encoding: utf8
