--- a/config/database.yml
+++ b/config/database.yml
@@ -35,8 +35,8 @@ test:
 production:
   adapter: mysql2
   encoding: utf8
-  database: branchapp
-  username: branchapp
-  password: <%= ENV['PARAM2'] %>
-  host: <%= ENV['PARAM1'] %>
-  port: 3306
+  database: <%= ENV['RDS_DB_NAME'] %>
+  username: <%= ENV['RDS_USERNAME'] %>
+  password: <%= ENV['RDS_PASSWORD'] %>
+  host: <%= ENV['RDS_HOSTNAME'] %>
+  port: <%= ENV['RDS_PORT'] %>
