dev database fix

--- a/config/database.yml
+++ b/config/database.yml
@@ -33,7 +33,7 @@ test:
 production:
   adapter: mysql2
   encoding: utf8
-  database: <%= ENV['RDS_DB_NAME'] %>
+  database: ebdb_dev
   username: <%= ENV['RDS_USERNAME'] %>
   password: <%= ENV['RDS_PASSWORD'] %>
   host: <%= ENV['RDS_HOSTNAME'] %>
