--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 # Ignore bundler config
 /.bundle
 
+# Cross Enviroment issues
+Gemfile.lock
+
 # Ignore the default SQLite database.
 /db/*.sqlite3
 
