--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "app/models"]
 	path = app/models
 	url = https://github.com/TheTree/Branch-Models.git
+[submodule "db"]
+	path = db
+	url = https://github.com/TheTree/Branch-Database.git
