--- a/Branch.Core/Branch.Core.csproj
+++ b/Branch.Core/Branch.Core.csproj
@@ -73,8 +73,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Api\Halo4\Halo4.cs" />
-    <Compile Include="Authentication\I343.cs" />
+    <Compile Include="Api\Halo4\WaypointManager.cs" />
+    <Compile Include="Api\Authentication\I343.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
