Added le TeamCity build, and before clean settings setup

--- a/Branch.Core/Branch.Core.csproj
+++ b/Branch.Core/Branch.Core.csproj
@@ -31,6 +31,15 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'TCRelease|AnyCPU'">
+    <OutputPath>bin\TCRelease\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="EasyHttp">
       <HintPath>..\packages\EasyHttp.1.6.58.0\lib\net40\EasyHttp.dll</HintPath>
@@ -116,4 +125,8 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <Target Name="BeforeClean" Condition=" '$(Configuration)|$(Platform)' == 'TCRelease|AnyCPU' ">
+    <Message Text="Getting settings from server, and loading them into Branch.Core" Importance="high" />
+    <Copy SourceFiles="C:\TeamCity\buildHelpers\settings\branch\settings.json" ContinueOnError="false" DestinationFolder="$(MSBuildProjectDirectory)" />
+  </Target>
 </Project>
