more fixes, more features, more... branch

--- a/Branch.Core/Branch.Core.csproj
+++ b/Branch.Core/Branch.Core.csproj
@@ -92,6 +92,8 @@
     </Compile>
     <Compile Include="Properties\Settings.cs" />
     <Compile Include="Settings.cs" />
+    <Compile Include="Storage\AzureStorage.cs" />
+    <Compile Include="Storage\BlobStorage.cs" />
     <Compile Include="Storage\TableStorage.cs" />
   </ItemGroup>
   <ItemGroup>
