--- a/Branch.Models/Branch.Models.csproj
+++ b/Branch.Models/Branch.Models.csproj
@@ -73,12 +73,19 @@
     <Compile Include="Authentication\WaypointTokenEntity.cs" />
     <Compile Include="BaseEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\Halo4\343\DataModels\ChallengeModel.cs" />
     <Compile Include="Services\Halo4\343\DataModels\CommonModels.cs" />
+    <Compile Include="Services\Halo4\343\DataModels\Enums.cs" />
     <Compile Include="Services\Halo4\343\DataModels\MetadataModels.cs" />
+    <Compile Include="Services\Halo4\343\DataModels\PlaylistModel.cs" />
+    <Compile Include="Services\Halo4\343\DataModels\ServiceRecordModels.cs" />
+    <Compile Include="Services\Halo4\343\Responses\Challenge.cs" />
     <Compile Include="Services\Halo4\343\Responses\Metadata.cs" />
     <Compile Include="Services\Halo4\343\RegisterWebApp.cs" />
+    <Compile Include="Services\Halo4\343\Responses\Playlist.cs" />
+    <Compile Include="Services\Halo4\343\Responses\ServiceRecord.cs" />
     <Compile Include="Services\Halo4\343\WaypointResponse.cs" />
-    <Compile Include="Services\Halo4\Base.cs" />
+    <Compile Include="Services\Halo4\Branch\ServiceRecordEntity.cs" />
     <Compile Include="Services\Halo4\Enums.cs" />
     <Compile Include="Services\Halo4\TaskEntity.cs" />
   </ItemGroup>
