--- a/Branch.Helpers/packages.config
+++ b/Branch.Helpers/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
 <packages>
-	<package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
+  <package id="OctoPack" version="2.0.26" targetFramework="net45" />
 </packages>
