--- a/Branch.Service.Halo4/Branch.Service.Halo4.csproj
+++ b/Branch.Service.Halo4/Branch.Service.Halo4.csproj
@@ -89,6 +89,10 @@
       <Project>{8ad17440-0040-4cc4-9169-c02fe8d419cd}</Project>
       <Name>Branch.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Branch.Extenders\Branch.Extenders.csproj">
+      <Project>{8766681b-89e8-4bb8-bde1-87a2a6d43e7b}</Project>
+      <Name>Branch.Extenders</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Branch.Models\Branch.Models.csproj">
       <Project>{9232fbb8-7da5-4ad6-9b57-c34fcccf8ce6}</Project>
       <Name>Branch.Models</Name>
