--- a/Branch.App/Branch.App.csproj
+++ b/Branch.App/Branch.App.csproj
@@ -151,6 +151,8 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Areas\Halo4\Controllers\CommendationsController.cs" />
     <Compile Include="Areas\Halo4\Controllers\CsrController.cs" />
+    <Compile Include="Areas\Halo4\Controllers\GameController.cs" />
+    <Compile Include="Areas\Halo4\Controllers\HistoryController.cs" />
     <Compile Include="Areas\Halo4\Controllers\HomeController.cs" />
     <Compile Include="Areas\Halo4\Controllers\ServiceRecordController.cs" />
     <Compile Include="Areas\Halo4\Controllers\SpecializationsController.cs" />
@@ -160,8 +162,14 @@
     <Compile Include="Areas\Halo4\Models\CsrDetailData.cs" />
     <Compile Include="Areas\Halo4\Models\Enums.cs" />
     <Compile Include="Areas\Halo4\Models\CommendationsData.cs" />
+    <Compile Include="Areas\Halo4\Models\HistoryData.cs" />
     <Compile Include="Areas\Halo4\Models\ServiceRecordData.cs" />
     <Compile Include="Areas\Halo4\Models\SpecializationsData.cs" />
+    <Content Include="Areas\Halo4\Views\History\Partials\Header\SpartanOps.cshtml" />
+    <Content Include="Areas\Halo4\Views\History\Partials\Row\WarGames.cshtml" />
+    <Content Include="Areas\Halo4\Views\History\Partials\Row\Campaign.cshtml" />
+    <Content Include="Areas\Halo4\Views\History\Campaign.cshtml" />
+    <None Include="Content\Styles\Halo4\_game_history.scss" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Filters\ValidateH4ServiceRecordFilter.cs" />
     <Compile Include="Global.asax.cs">
@@ -210,6 +218,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Areas\Halo4\Views\Game\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
@@ -280,13 +289,16 @@
     <Content Include="Areas\Halo4\Views\Csr\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Areas\Halo4\Views\Csr\SkillRankContainer.cshtml" />
+    <Content Include="Areas\Halo4\Views\Csr\Partials\SkillRankContainer.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\Styles\Halo4\_csr.scss" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\Halo4\Views\Csr\Details.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Areas\Halo4\Views\History\WarGames.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
