--- a/Branch.App/Branch.App.csproj
+++ b/Branch.App/Branch.App.csproj
@@ -158,15 +158,20 @@
     <Compile Include="Areas\Halo4\Controllers\SpecializationsController.cs" />
     <Compile Include="Areas\Halo4\Halo4AreaRegistration.cs" />
     <Compile Include="Areas\Halo4\Models\Base.cs" />
-    <Compile Include="Areas\Halo4\Models\CsrData.cs" />
-    <Compile Include="Areas\Halo4\Models\CsrDetailData.cs" />
+    <Compile Include="Areas\Halo4\Models\CsrViewModel.cs" />
+    <Compile Include="Areas\Halo4\Models\CsrDetailViewModel.cs" />
     <Compile Include="Areas\Halo4\Models\Enums.cs" />
-    <Compile Include="Areas\Halo4\Models\CommendationsData.cs" />
-    <Compile Include="Areas\Halo4\Models\HistoryData.cs" />
-    <Compile Include="Areas\Halo4\Models\ServiceRecordData.cs" />
-    <Compile Include="Areas\Halo4\Models\SpecializationsData.cs" />
+    <Compile Include="Areas\Halo4\Models\CommendationsViewModel.cs" />
+    <Compile Include="Areas\Halo4\Models\GameViewModel.cs" />
+    <Compile Include="Areas\Halo4\Models\HistoryViewModel.cs" />
+    <Compile Include="Areas\Halo4\Models\ServiceRecordViewModel.cs" />
+    <Compile Include="Areas\Halo4\Models\SpecializationsViewModel.cs" />
     <Content Include="Areas\Halo4\Views\History\Campaign.cshtml" />
     <Content Include="Areas\Halo4\Views\History\SpartanOps.cshtml" />
+    <Content Include="Areas\Halo4\Views\Game\Index.cshtml" />
+    <Content Include="Areas\Halo4\Views\Game\Covers\WarGames.cshtml" />
+    <Content Include="Areas\Halo4\Views\Game\Covers\Campaign.cshtml" />
+    <Content Include="Areas\Halo4\Views\Game\Covers\SpartanOps.cshtml" />
     <None Include="Content\Styles\Halo4\_game_history.scss" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Filters\ValidateH4ServiceRecordFilter.cs" />
@@ -176,6 +181,7 @@
     <Compile Include="Helpers\Razor\BranchHelpers.cs" />
     <Compile Include="Helpers\Razor\Halo4\GeneralHelpers.cs" />
     <Compile Include="Helpers\Razor\Halo4\MetadataHelpers.cs" />
+    <Compile Include="Helpers\Razor\MathHelpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -216,7 +222,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Areas\Halo4\Views\Game\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
