--- a/Branch.App/Web.Debug.config
+++ b/Branch.App/Web.Debug.config
@@ -15,6 +15,7 @@
     </connectionStrings>
   -->
   <system.web>
+	<customErrors mode="Off" />
     <!--
       In the example below, the "Replace" transform will replace the entire 
       <customErrors> section of your web.config file.
